# ollama-herd

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: adaptive-capacity.md  api-reference.md  architecture-decisions.md  competitive-landscape.md  configuration-reference.md  fleet-manager-routing-engine.md  issues.md  observations.md  ollama-fleet-manager-research.md  ollama-fleet-manager-v2.md  ollama-fleet-manager.md  openclaw-integration.md  operations-guide.md  pypi-download-stats.md  request-tagging.md  skill-marketplace-analysis.md  skill-publishing-strategy.md  troubleshooting.md  why-distribute-inference.md
docs/examples/: fleet-env.example
docs/experiments/: claude-code-stress-test.py  context-bloat-analysis.py  mlx-lm-q8kv-benchmark.md  mlx-lm-q8kv-benchmark.py  mlx-lm-server-kv-bits.patch  mlx_q8_server_results.json  ollama_results.json
docs/guides/: agent-setup-guide.md  claude-code-integration.md  dashboard-color-reference.md  image-generation.md  integrate-z-image-turbo.md  mlx-setup.md  optimizing-claude-md.md  optimizing-skills-for-clawhub.md  request-tagging-analytics.md  thinking-models.md
docs/handoffs/: ollamaherd-com-color-refresh.md
docs/issues/: mlx-speculative-decoding-blocked.md  multi-mlx-server-support.md  pin-button-mlx-hosted-llms.md
docs/plans/: anthropic-messages-compat.md  claude-code-enhancements-from-field-survey.md  claude-code-performance-improvements.md  context-size-protection.md  dashboard-color-semantics.md  device-aware-scoring.md  dynamic-num-ctx.md  expanded-image-generation.md  hot-fleet-health-checks.md  image-generation-routing.md  mlx-backend-for-large-models.md  mlx-prompt-cache-optimization.md  mlx-prompt-pruning.md  mlx-stability-and-concurrency-research.md  multimodal-routing-roadmap.md  ollama-m3-ultra-optimization.md  platform-connection-ux.md  platform-local-usage-telemetry.md  platform-p2p-capability-advertisement.md  priority-model-loading.md  request-tagging-apps-analytics.md  settings-dashboard-page.md  vision-embedding-service.md  vision-model-support.md  vram-aware-model-fallback.md
docs/research/: anthropic-server-optimizations-vs-local.md  claude-code-local-ecosystem-landscape.md  claude-code-local-models.md  claude-code-ollama-ecosystem-2026.md  claude-code-proxy-techniques-survey.md  envoy-ai-gateway-comparison.md  local-ai-tools-beyond-llms.md  local-fleet-economics.md  mflux-image-generation.md  mlx-lm-stability-and-concurrency.md  why-claude-code-degrades-at-30k.md
docs/upstream-issues/: mlx-lm-load-default-crashloop.md
scripts/: benchmark-performance.py  benchmark.py  diff-sequential-turns.py  health.sh  patch-diffusionkit-macos26.sh  replay-debug-requests.py  setup-mlx.sh  test-claude-code-requests.py
skills/: README.md
skills/ai-devops-toolkit/: SKILL.md
skills/apple-silicon-ai/: SKILL.md
skills/cuda-ollama/: SKILL.md
skills/deepseek/: SKILL.md
skills/deepseek-deepseek-coder/: SKILL.md
skills/distributed-inference/: SKILL.md
skills/fleet-embeddings/: SKILL.md
skills/gemma-gemma3/: SKILL.md
skills/gpu-cluster-manager/: SKILL.md
skills/homelab-ai/: SKILL.md
skills/linux-ai-server/: SKILL.md
skills/linux-ollama/: SKILL.md
skills/llama-llama3/: SKILL.md
skills/local-coding/: SKILL.md
skills/local-llm-router/: SKILL.md
skills/local-transcription/: SKILL.md
skills/mac-studio-ai/: SKILL.md
skills/mflux-image-router/: SKILL.md
skills/mistral-codestral/: SKILL.md
skills/mlx-apple-silicon-mlx/: SKILL.md
skills/ollama-herd/: SKILL.md
skills/ollama-load-balancer/: SKILL.md
skills/ollama-manager/: SKILL.md
skills/ollama-ollama-herd/: SKILL.md
skills/ollama-proxy/: SKILL.md
skills/ollama-skill/: SKILL.md
skills/phi-phi4/: SKILL.md
skills/private-ai/: SKILL.md
skills/qwen/: SKILL.md
skills/qwen-qwen3/: SKILL.md
skills/qwen-qwen3-5/: SKILL.md
skills/rtx-local-ai/: SKILL.md
skills/self-hosted-ai/: SKILL.md
skills/stable-diffusion-sd3/: SKILL.md
skills/ubuntu-ai/: SKILL.md
skills/ubuntu-ollama/: SKILL.md
tests/: conftest.py
website/: about.md  compare.md  features.md  guides.md  how-it-works.md  privacy.md  skills.md  terms.md  use-cases.md
(+133 files in other folders)
