[project]
name = "ollama-herd"
version = "0.6.0"
description = "Smart multimodal router — LLM inference, image generation, speech-to-text, and embeddings across your device fleet. Cross-platform: macOS, Linux, Windows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Geeks Accelerator", email = "hello@geeks-accelerator.com" },
]
keywords = ["ollama", "llm", "inference", "router", "load-balancer", "mDNS", "openai-compatible", "fleet", "multimodal", "speech-to-text", "image-generation", "embeddings", "cross-platform", "windows", "linux", "nvidia", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Framework :: FastAPI",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "psutil>=6.0.0",
    "zeroconf>=0.136.0",
    "sse-starlette>=2.1.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "cryptography>=42.0.0",
    "websockets>=13.0",
    "tiktoken>=0.7.0",
    # Tool-call JSON repair — recovers model output with minor syntax
    # errors (trailing commas, missing brackets, unescaped quotes) that
    # would otherwise fail to parse on the Claude Code side.  Pure Python.
    "json-repair>=0.29",
]

[project.urls]
Homepage = "https://github.com/geeks-accelerator/ollama-herd"
Repository = "https://github.com/geeks-accelerator/ollama-herd"
Documentation = "https://github.com/geeks-accelerator/ollama-herd/tree/main/docs"
Issues = "https://github.com/geeks-accelerator/ollama-herd/issues"

[project.scripts]
herd = "fleet_manager.cli.server_cli:main"
herd-node = "fleet_manager.cli.node_cli:main"

[project.optional-dependencies]
embedding = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "onnxruntime>=1.17",
    "huggingface-hub>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.8.0",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fleet_manager"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Dashboard has inline HTML/CSS/JS string literals that exceed line length
"src/fleet_manager/server/routes/dashboard.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = []
